Widget on mirror

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -227,7 +227,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/Test_for_mirrors
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
 Hunt_for_blood.TimeStamp=2024.04.23-12.35.36
@@ -1362,26 +1362,26 @@ None=======
 OpenAssetsAtExit=/Game/AI_Advanced/Objects/Objeto_Interactuable.Objeto_Interactuable
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sounds/Beam
-MRUItem1=/Game/AI_Advanced/Objects/Objeto_Interactuable
-MRUItem2=/Game/ThirdPerson/Maps/Test_for_mirrors
-MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem4=/Game/ThirdPerson/Maps/Lvl01
-MRUItem5=/Game/ThirdPerson/Maps/Main
-MRUItem6=/Game/ThirdPerson/Maps/Boss_Tester
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4
-MRUItem9=/Game/Sounds/Door_Open
-MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
-MRUItem11=/Game/Sounds/light-sabre-77103_GSm8H7nC
-MRUItem12=/Game/Sounds/Beram
-MRUItem13=/Game/Sounds/Beam_2
-MRUItem14=/Game/Sounds/Light_Beam
-MRUItem15=/Game/Sounds/beam-sequence-105586
-MRUItem16=/Game/Maps/Test
-MRUItem17=/Game/AI_Advanced/Objects/Interruptor
-MRUItem18=/Game/AI_Advanced/Objects/Palanca
-MRUItem19=/Game/AI_Advanced/Objects/Interruptor_2
+MRUItem0=/Game/AI_Advanced/Objects/Objeto_Interactuable
+MRUItem1=/Game/AI_Advanced/Objects/WP_Interact
+MRUItem2=/Game/Sounds/Beam
+MRUItem3=/Game/ThirdPerson/Maps/Test_for_mirrors
+MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem5=/Game/ThirdPerson/Maps/Lvl01
+MRUItem6=/Game/ThirdPerson/Maps/Main
+MRUItem7=/Game/ThirdPerson/Maps/Boss_Tester
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/Zona_Colocacion_4
+MRUItem10=/Game/Sounds/Door_Open
+MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/PuzlePrueba
+MRUItem12=/Game/Sounds/light-sabre-77103_GSm8H7nC
+MRUItem13=/Game/Sounds/Beram
+MRUItem14=/Game/Sounds/Beam_2
+MRUItem15=/Game/Sounds/Light_Beam
+MRUItem16=/Game/Sounds/beam-sequence-105586
+MRUItem17=/Game/Maps/Test
+MRUItem18=/Game/AI_Advanced/Objects/Interruptor
+MRUItem19=/Game/AI_Advanced/Objects/Palanca
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -4253,6 +4253,7 @@ SoundWave.Developer=True
 SoundWave.Voice Management=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
+Objeto_Interactuable_C.Bool_Espejos=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" "
@@ -4406,7 +4407,7 @@ BP_sistema_Equipamiento_C.Activation=True
 BP_sistema_Equipamiento_C.Cooking=True
 BP_sistema_Equipamiento_C.Events=True
 DataAsset="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
@@ -4427,10 +4428,10 @@ PrimitiveComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ActorComponent="\"Object\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SpringArmComponent="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -4542,7 +4543,7 @@ SkinnedMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -4574,15 +4575,15 @@ PaperTileMapComponent="\"Object\" "
 PaperTileMap="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
 UI_HuntForBlood_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 BP_Stadistics_C="\"Object\" \"Object.Tags.ComponentTags\" "
 K2Node_InputDebugKey="\"Object\" "
-TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Enemy_Health_C="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object\" "
@@ -4906,7 +4907,7 @@ MRUItem8=/Game/ThirdPerson/Maps/Level_Tester
 [MessageLog]
 LastLogListing=FBXImport
 LastLogListing=PIE
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 None=======
 None=======
 
@@ -5691,6 +5692,7 @@ None=======
 /Game/Sounds/Beam_2.Beam_2=1
 /Game/Sounds/Beam.Beam=1
 /Game/Sounds/Door_Open.Door_Open=1
+/Game/AI_Advanced/Objects/WP_Interact.WP_Interact=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
