--- a/Saved/Config/ConsoleHistory.ini
+++ b/Saved/Config/ConsoleHistory.ini
@@ -1,3 +1,5 @@
 [ConsoleHistory]
 History=r.Shadow.Virtual.MaxPhysicalPages
+History="DumpUnbuiltLightInteractions "
+History=DumpUnbuiltLightInteractions
 
